MDEV-10506 Protocol::end_statement(): Assertion `0' failed upon ALTER TABLE

thd->clear_error() destroyed already existing error status